--- a/style.css
+++ b/style.css
@@ -2175,6 +2175,9 @@ width: -webkit-calc(100% / 4);
 	padding-top: 100px;
 	background: #FFFFFF;
 }
+.our-team a {
+	font-size: 14px;
+}
 .team-member {
 	border-radius: 4px;
 	overflow: hidden;
